tests/linearity-regression/accept/ptr_in_let_no_s0901.pdx
module PtrLetTest = structure {
  let a = 100
  let b = 101
}
