tests/linearity-regression/reject/s0905_handler_reorders_ordered.pdx
module M = structure {
  let a = 1
  let b = 2
  with {
    let handler = {
      x = fn() -> b; a
    }
  }
}
